--- a/public/styles/scss/config/layouts/_common.scss
+++ b/public/styles/scss/config/layouts/_common.scss
@@ -23,7 +23,7 @@ img{max-width:100%;}
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button ,input,textarea{
 -webkit-appearance: none;margin: 0;}
-input[type=number]{-moz-appearance: textfield !important;-webkit-appearance: none;}
+input[type=number]{-moz-appearance: textfield;-webkit-appearance: none;}
 input:disabled{background:none;}
 
 ::placeholder{color:#b2b2b2 !important;font-weight:300;}
@@ -116,9 +116,6 @@ main{width: 100% !important;margin:0;padding:0;overflow: hidden;
 		a{width:150px;@include height-set(37px,35px);padding:0 18px;
 			.fs_16{font-size:13px;}
 			.icon{top:-1px;}
-			&:hover{
-				.icon{transform:translateX(5px);}
-			}
 		}
 	}
 }
