--- a/public/styles/scss/config/layouts/pages/_research.scss
+++ b/public/styles/scss/config/layouts/pages/_research.scss
@@ -24,7 +24,7 @@
                     img{display:block;}
                 }
                 .label{display:block;text-align:center;margin-top:15px;}
-                .text{width:100%;background:#1590CC;padding:9px 10px;text-align:center;margin-top:5px;color:#fff;border-radius: 40px;}
+                .text{width:100%;background:#1590CC;padding:9px 20px;text-align:center;margin-top:5px;color:#fff;border-radius: 40px;}
                 &:nth-of-type(even){
                     .text{background:#78C7F0;}
                 }
@@ -247,13 +247,13 @@
             transform: skewY(-3.1deg);top:-102px;left:0;background-color:#fff;
         }
         .data-list{display:flex; justify-content: center;position:relative;
-            .item{padding:0 27px;width:calc(100% / 3);max-width:279px;
+            .item{padding:0 37px;width:calc(100% / 3);max-width:279px;
                 .tag{color:#fff;padding-bottom:22px;text-align:center;}
                 .circlebox{
                     &:before{content:'';display:block;width:1px;height:100px;background:#E8E8E8;margin:0 auto;}
-                    .circle{border:8px solid #A8DAF4;border-radius: 50%;width:225px;height:225px;margin-top:5px;padding:25px 15px;
+                    .circle{border:8px solid #A8DAF4;border-radius: 50%;width:205px;height:205px;margin-top:5px;padding:25px;
                         display:flex; justify-content: center; align-items: center;
-                        .text{/*max-width:110px;*/color:#333;text-align:center;}
+                        .text{max-width:110px;color:#333;text-align:center;}
                     }
                 }
             }
@@ -288,9 +288,9 @@
     @media(max-width:768px){
         .training-list{
             .data-list{
-                .item{padding:0 5px;
+                .item{padding:0 10px;
                     .circlebox{
-                        .circle{width:27vw;height:27vw;}
+                        .circle{width:26vw;height:26vw;}
                     }
                 }
             }
@@ -320,9 +320,9 @@
             .data-list{
                 .item{
                     .tag{width:130px;}
-                    .circlebox{width:215px;
+                    .circlebox{width:195px;
                         &:before{width:35px;}
-                        .circle{margin:0 0 0 45px;width:170px;height:170px;}
+                        .circle{margin:0 0 0 45px;width:150px;height:150px;}
                     }
                 }
             }
