--- a/public/styles/scss/layouts/pages/_pdcell.scss
+++ b/public/styles/scss/layouts/pages/_pdcell.scss
@@ -437,7 +437,7 @@
 		.item{display:flex;
 			.databox{border-radius: 5px;min-width:140px;display:flex;align-items: center;justify-content: center;padding:12.5px 15px;}
 			span{color:#fff;display:inline-block;width:100%;text-align:center;line-height:1.39;}
-			.arrow{width:65px;padding:0 8px;display:flex;align-items: center;
+			.arrow{width:65px;padding:0 8px;display:flex;align-items: center;font-size:0;
 				&:before,&:after{content:'';display:inline-block;}
 				&:before{width:40px;height:1px;background:#000;}
 				&:after{width:6px;height:6px;background:url(images/common/icon-triangle.png);}
